# gector

./: LICENSE  README.md  __init__.py  predict.py  predict_tweak.py  pyproject.toml  requirements.txt  train.py  upload_to_hub.py
gector/: __init__.py  configuration.py  modeling.py  predict.py  vocab.py
src/gector/: configuration.py  dataset.py  modeling.py  predict.py  predict_verbose.py  utils.py
src/gector/cli/: predict.py  predict_tweak.py
