[project]
name = "gector"
version = "1.2.0"
description = "Unofficial PyTorch implementation of 'GECToR -- Grammatical Error Correction: Tag, Not Rewrite'"
readme = "README.md"
authors = [
    { name = "gotuiyan"}
]
requires-python = ">=3.11.0"
dependencies = [
    "accelerate>=1.3.0",
    "huggingface-hub>=0.28.1",
    "python-levenshtein>=0.26.1",
    "torch>=2.6.0",
    "transformers>=4.48.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
gector-predict = "gector.cli.predict:cli_main"
gector-predict-tweak = "gector.cli.predict_tweak:cli_main"
